Fixed issue with home page images were skewed and too wide.

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -33,17 +33,20 @@
 	/* background-image: url(../img/latest-news3.jpg); */
     background-image: url(../img/asset_profile_portrait_2.png);
 	background-size: 100% 100%;
+    width: 100%;
 }
 
 #sl-image-manuals {
 	background-image: url(../img/manuals.jpg);
 	background-size: 100% 100%;	
+    width: 100%;
 }
 
 #sl-image-annotations {
 	/* background-image: url(../img/annotation-pins.jpg); */
 	background-image: url(../img/cad_portrait_2.png);
 	background-size: 100% 100%;	
+    width: 100%;
 }
 
 #sl-image-ipad {
